need-fix-blue-bar-spacing

--- a/src/styles/partials/_mixins.scss
+++ b/src/styles/partials/_mixins.scss
@@ -2,3 +2,10 @@
     display: flex;
     align-items: center;
 }
+
+@mixin centered-content{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5rem;
+}
